remove some redundant code and replace some deprecated code